<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iamtomriddle.aboutme.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp"
                >
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="5dp"
                android:layout_weight="1"
                android:src="@drawable/profimg"/>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >



            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"


                android:textColor="@android:color/black"
                android:textSize="40dp"
                android:textStyle="bold"
                android:text="@string/name" />
            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="italic"

                android:textColor="@android:color/darker_gray"
                android:text="@string/idd"/>
            </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/who"
                android:textSize="20sp"

                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_margin="@dimen/fab_margin"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="@string/im"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/in"
                    android:textSize="20sp"

                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/fab_margin"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:text="@string/inter"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/sto"
                    android:textSize="20sp"

                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/fab_margin"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:text="@string/mys"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/w"
                    android:textSize="20sp"

                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/fab_margin"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:text="@string/work"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/wrd"
                    android:textSize="20sp"

                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/fab_margin"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:text="@string/words"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp">



            android:textSize="20sp"
            android:textColor="@android:color/black"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/follow"
                    android:textSize="20sp"

                    android:textColor="@android:color/black"
                    />
                <LinearLayout
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView

                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:src="@drawable/faceb"
                        android:clickable="true"
                        android:onClick="onFace"/>
                    <ImageView

                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:src="@drawable/gpp"
                        android:clickable="true"
                        android:onClick="onGoog"/>
                    <ImageView

                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:src="@drawable/insta"
                        android:clickable="true"
                        android:onClick="onInsta"/>
                    <ImageView

                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:src="@drawable/twitter"
                        android:clickable="true"
                        android:onClick="onTwit"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>




